--- a/sass/layout/_sidebar.scss
+++ b/sass/layout/_sidebar.scss
@@ -12,8 +12,9 @@
 		display: none;
 	}
 
+
 	h1.widget-title {
-		font-size: $h2-font-size;;
+		font-size: $wb-font-size-h2;
 	}
 
 	.widget-title {
