--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,43 +15,38 @@ html {
 	        box-sizing: inherit;
 }	
 
-html,
 body {
-	margin: 0;
-	padding: 0;
-}
-
-html {
-	font-family: $base-font-family;
-	font-size: $base-font-size;
-	line-height: $base-line-height;
-}
-
-body {
-	color: $base-text-color;
-	background-color: #fff;
+	color: $wb-text-color;
+	font-family: $wb-body-font;
+	font-size: $wb-font-size;
+	line-height: $wb-line-height;
+	background-color: $wb-body-bg;
 	-webkit-text-size-adjust: 100%;
-	    -ms-text-size-adjust: 100%;
-}
-
-figure,
-img {
-	height: auto; /* Make sure images are scaled correctly. */
-	max-width: 100%; /* Adhere to container width. */
+	-ms-text-size-adjust: 100%;
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-	color: $base-text-link-color;
-	text-decoration: none;
+	color: $wb-link-color;
+	text-decoration: $wb-link-decoration;
 
 	/* `:focus` is linked to `:hover` for basic accessibility */
 	&:hover,
 	&:focus {
-		text-decoration: underline;
+		text-decoration: $wb-link-hover-decoration;
 	}
 
 	strong {
 		color: inherit;
 	}
+}
+
+hr {
+	margin: 2em 0;
+	border-top: 1px solid #eee;
+	border-bottom: none;
+}
+
+.lead {
+	font-size: 1.125em;
 }
