--- a/sass/utils/_helpers.scss
+++ b/sass/utils/_helpers.scss
@@ -1,18 +1,20 @@
 /* Alignments */
+
+.centered,
+.aligncenter {
+	@include center-block;
+}
+
 .alignleft {
 	display: inline;
 	float: left;
-	margin-right: 1.5#{$base-unit};
+	margin-right: 1.5#{$wb-base-unit};
 }
 
 .alignright {
 	display: inline;
 	float: right;
-	margin-left: 1.5#{$base-unit};
-}
-
-.aligncenter {
-	@include center-block;
+	margin-left: 1.5#{$wb-base-unit};
 }
 
 /*
