--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,3 +64,8 @@ Use it to make something cool, have fun, and share what you've learned with othe
 // Pages
  
 @import "pages/home";
+@import "pages/blog";
+
+// Everything that can be categorized later
+
+@import "todo";
