--- a/sass/base/_forms.scss
+++ b/sass/base/_forms.scss
@@ -1,7 +1,10 @@
-/* Based on FormHack v1.0.0 (formhack.io) */
+/* 
+ * Forms
+ *
+ * Based on FormHack v1.0.0 (formhack.io) 
+ */
 
 /* Global */
-
 .form-base {
   input,
   textarea,
@@ -27,10 +30,9 @@
   }
 }
 
-/* Input & textarea */
-
-/* Fields with standard width */
+/* Input & textarea  */
 .form-base {
+	/* Fields with standard width */
   input[type="text"],
   input[type="email"],
   input[type="password"],
@@ -52,9 +54,6 @@
     max-width: $wb-form-input-max-width;
     padding: $wb-form-input-height / 5;
     background-color: $wb-form-input-bg-color;
-
-    -webkit-border-radius: $wb-form-border-radius;
-    -moz-border-radius: $wb-form-border-radius;
     border-radius: $wb-form-border-radius;
     border: $wb-form-border-width $wb-form-border-style $wb-form-border-color;
   }
@@ -142,8 +141,6 @@
 
   fieldset {
 		padding: 10px 25px;
-		-webkit-border-radius: $wb-form-border-radius;
-		-moz-border-radius: $wb-form-border-radius;
 		border-radius: $wb-form-border-radius;
 		border: $wb-form-border-width $wb-form-border-style $wb-form-border-color;
 	}
@@ -155,7 +152,6 @@
 }
 
 /* States */
-
 .form-base {
   input[disabled],
   textarea[disabled],
@@ -181,13 +177,11 @@
 }
 
 /* Field Group Styles */
-
 .field-group {
 	margin-bottom: 1em;
 }
 
 /* States & Feedback */
-
 .form-base {
 	.label-inline,
 	.checkbox-text {
@@ -205,5 +199,4 @@
 	.form-base-error {
 		color: brown;
 	}
-
 }
