--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,3 +1,7 @@
+/* 
+ * Main styling
+ */
+
 .container {
 	max-width: 60em;
 	margin: 0 auto;
@@ -18,12 +22,3 @@
 	}
 }
 
-/* Blog */
-
-.blog {
-	article {
-		margin-bottom: 4em;
-		padding-bottom: 2em;
-		border-bottom: 1px dotted #ccc;
-	}
-}
