--- a/style.css
+++ b/style.css
@@ -195,7 +195,6 @@ figure {
  * Address differences between Firefox and other browsers.
  */
 hr {
-  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0; }
 
@@ -324,8 +323,6 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box; }
 
@@ -382,6 +379,9 @@ td,
 th {
   padding: 0; }
 
+/*
+ * Helpers
+ */
 /* Alignments */
 .centered,
 .aligncenter {
@@ -440,13 +440,9 @@ th {
  * Update the foundational and global aspects of the page.
  */
 html {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
 *, *:before, *:after {
-  -webkit-box-sizing: inherit;
-  -moz-box-sizing: inherit;
   box-sizing: inherit; }
 
 body {
@@ -476,7 +472,11 @@ hr {
 .lead {
   font-size: 1.125em; }
 
-/* Based on FormHack v1.0.0 (formhack.io) */
+/* 
+ * Forms
+ *
+ * Based on FormHack v1.0.0 (formhack.io) 
+ */
 /* Global */
 .form-base input,
 .form-base textarea,
@@ -496,9 +496,9 @@ hr {
   display: block;
   margin-bottom: 0; }
 
-/* Input & textarea */
-/* Fields with standard width */
+/* Input & textarea  */
 .form-base {
+  /* Fields with standard width */
   /* Fields with standard height */ }
   .form-base input[type="text"],
   .form-base input[type="email"],
@@ -521,8 +521,6 @@ hr {
     max-width: 400px;
     padding: 8px;
     background-color: #fff;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
     border-radius: 5px;
     border: 1px solid #c8c8c8; }
   .form-base input[type="text"],
@@ -576,8 +574,6 @@ hr {
       padding: 8px; }
   .form-base fieldset {
     padding: 10px 25px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
     border-radius: 5px;
     border: 1px solid #c8c8c8; }
   .form-base legend {
@@ -618,6 +614,9 @@ hr {
 .form-base .form-base-error {
   color: brown; }
 
+/* 
+ * Typography
+ */
 h1,
 h2,
 h3,
@@ -629,9 +628,7 @@ h6 {
   line-height: 1.125;
   text-rendering: optimizeLegibility; }
 
-/*
- * Headings specific font size 
- */
+/* Headings specific font size */
 h1 {
   font-size: 2.225em; }
 
@@ -647,9 +644,7 @@ h4 {
 h5 {
   font-size: 1em; }
 
-/* 
- * Paragraph 
- */
+/* Paragraph */
 p {
   margin-top: 1em;
   margin-bottom: 1em; }
@@ -681,9 +676,7 @@ li > ul,
 li > ol {
   margin-bottom: 0; }
 
-/*
- * Code
- */
+/* Code */
 pre {
   margin-top: 0;
   margin-bottom: 0;
@@ -695,9 +688,7 @@ pre,
 samp {
   font-family: "Menlo", Inconsolata, Consolas, Monaco, monospace; }
 
-/*
- * Quotes
- */
+/* Quotes */
 blockquote {
   padding-left: 1.25em;
   margin: 1em 0;
@@ -707,9 +698,7 @@ blockquote {
 blockquote p:last-child {
   margin-bottom: 0; }
 
-/*
- * Abbreviations
- */
+/* Abbreviations */
 abbr {
   cursor: help;
   font-variant: small-caps;
@@ -797,6 +786,9 @@ a.button-primary,
 .button-large {
   font-size: 1.125em !important; }
 
+/*
+ * Comments
+ */
 #comments {
   border: 1px solid #ccc;
   border-radius: 6px;
@@ -835,6 +827,9 @@ a.button-primary,
   #respond label {
     display: block; }
 
+/*
+ * Media
+ */
 /* Images */
 figure,
 img {
@@ -897,7 +892,10 @@ iframe,
 object {
   max-width: 100%; }
 
-/* Top Navigation */
+/*
+ * Navigation 
+ */
+/* Top navigation */
 .top-navigation {
   padding: .3em 0;
   background-color: #222; }
@@ -918,7 +916,7 @@ object {
   margin: 0;
   float: right; }
 
-/* Main Navigation */
+/* Main navigation */
 .main-navigation {
   padding: .618em 0;
   background-color: #ccc; }
@@ -946,15 +944,7 @@ object {
 .page_item {
   float: left; }
 
-/* Dropdown */
-.menu-item-has-children,
-.page_item_has_children {
-  position: relative; }
-  .menu-item-has-children:hover > .sub-menu, .menu-item-has-children:hover > .children,
-  .page_item_has_children:hover > .sub-menu,
-  .page_item_has_children:hover > .children {
-    display: block; }
-
+/* Dropdown menu */
 .sub-menu,
 .children {
   position: absolute;
@@ -974,7 +964,16 @@ object {
     top: 0;
     left: 100%; }
 
-/* Small menu */
+/* Dropdown menu element */
+.menu-item-has-children,
+.page_item_has_children {
+  position: relative; }
+  .menu-item-has-children:hover > .sub-menu, .menu-item-has-children:hover > .children,
+  .page_item_has_children:hover > .sub-menu,
+  .page_item_has_children:hover > .children {
+    display: block; }
+
+/* Toggle button for mobile navigation */
 .menu-toggle,
 .main-navigation.toggled .nav-menu {
   display: block; }
@@ -989,6 +988,7 @@ object {
     .main-navigation .nav-menu {
       display: block; } }
 
+/* Misc navigation elements */
 .site-main .comment-navigation,
 .site-main .posts-navigation,
 .site-main .post-navigation {
@@ -1009,6 +1009,9 @@ object {
   text-align: right;
   width: 50%; }
 
+/* 
+ * Tables 
+ */
 table {
   margin-bottom: 1em;
   width: 100%;
@@ -1028,11 +1031,17 @@ tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
   background-color: #f2f2f2; }
 
+/* 
+ * Site footer 
+ */
 .site-footer {
   padding: 2em 0;
   background-color: #333;
   color: #fff; }
 
+/*
+ * Grid setup 
+ */
 [class^="col-"]:first-child {
   margin-left: 0; }
 
@@ -1156,6 +1165,9 @@ tbody tr:nth-child(odd) th {
   width: 100%;
   margin-left: 4%; }
 
+/*
+ * Header
+ */
 .skip-link {
   display: none; }
 
@@ -1173,6 +1185,9 @@ tbody tr:nth-child(odd) th {
   color: #aaa;
   font-weight: normal; }
 
+/* 
+ * Main styling
+ */
 .container {
   max-width: 60em;
   margin: 0 auto;
@@ -1217,5 +1232,3 @@ tbody tr:nth-child(odd) th {
     padding-left: 0;
     margin-left: 0;
     list-style: none; }
-
-/*# sourceMappingURL=style.css.map */
