--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,24 +1,22 @@
 /*
-Theme Name: _s
-Theme URI: http://lodashs.me/
-Author: Juan Olvera 
+Theme Name: Whiteboard
+Theme URI: http://adwhite.com/whiteboard
+Author: Juan Olvera
 Author URI: http://thinkxl.github.io/
-Description: Hi. I'm a starter theme called <code>_s</code>, or <em>underscores</em>, if you like. I'm a theme meant for hacking so don't use me as a <em>Parent Theme</em>. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.
-Version: 1.0-wpcom
+Description: Description goes here.
+Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: _s
+Text Domain: whiteboard
 Tags:
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
-
- _s is based on lodashes http://lodashs.me/, (C) 2014-2015 Automattic, Inc.
 */
 
-// 
+//
 // Contents
-// 
+//
 // Vendors
 // Utils
 // Base
@@ -30,42 +28,42 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 // Vendors
 
-@import "vendors/fraction";
-@import "vendors/normalize";
+@import 'vendors/fraction';
+@import 'vendors/normalize';
 
 // Utils
 
-@import "utils/variables";
-@import "utils/mixins";
-@import "utils/helpers";
+@import 'utils/variables';
+@import 'utils/mixins';
+@import 'utils/helpers';
 
-// Base 
+// Base
 
-@import "base/base";
-@import "base/forms";
-@import "base/typography";
+@import 'base/base';
+@import 'base/forms';
+@import 'base/typography';
 
 // Components
- 
-@import "components/buttons";
-@import "components/comments";
-@import "components/media";
-@import "components/navigation";
-@import "components/tables";
- 
+
+@import 'components/buttons';
+@import 'components/comments';
+@import 'components/media';
+@import 'components/navigation';
+@import 'components/tables';
+
 // Layout
- 
-@import "layout/footer";
-@import "layout/grid";
-@import "layout/header";
-@import "layout/main";
-@import "layout/sidebar";
- 
+
+@import 'layout/footer';
+@import 'layout/grid';
+@import 'layout/header';
+@import 'layout/main';
+@import 'layout/sidebar';
+
 // Pages
- 
-@import "pages/home";
-@import "pages/blog";
+
+@import 'pages/home';
+@import 'pages/blog';
 
 // Everything that can be categorized later
 
-@import "todo";
+@import 'todo';
