--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,8 +28,13 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 // Vendors
 
-@import 'vendors/fraction';
-@import 'vendors/normalize';
+// bower:css
+@import "../vendors/normalize-css/normalize.css";
+// endbower
+
+// bower:scss
+@import "../vendors/hyx.scss/hyx.scss";
+// endbower
 
 // Utils
 
