Fixed issue with watch not watching bower.json
Signed-off-by: Juan Olvera <olverajuanluis@gmail.com>

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,7 +33,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 // endbower
 
 // bower:scss
-@import "../vendors/hyx.scss/hyx.scss";
+@import "../vendors/tequila.scss/tequila.scss";
 // endbower
 
 // Utils
