--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,11 +1,11 @@
 /*
- * Base 
+ * Base
  *
  * Update the foundational and global aspects of the page.
  */
 
 html {
-	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 		 -moz-box-sizing: border-box;
 	        box-sizing: border-box;
 }
@@ -13,7 +13,7 @@ html {
 	-webkit-box-sizing: inherit;
 		 -moz-box-sizing: inherit;
 	        box-sizing: inherit;
-}	
+}
 
 body {
 	color: $wb-text-color;
