--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,60 +1,60 @@
 /*
- * Buttons 
+ * Buttons
  */
 
-.button-static {
-	display: inline-block;
-	padding: 0.75em 1em;
-	border: 0;
-	border-radius: $wb-btn-border-radius;
-	text-decoration: none;
-	font-family: inherit;
-	font-size: inherit;
-	line-height: 1;
-	cursor: pointer;
+%button-static {
+  display: inline-block;
+  padding: .75em 1em;
+  border: 0;
+  border-radius: $wb-btn-border-radius;
+  text-decoration: none;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: 1;
+  cursor: pointer;
 
-	&:focus {
-		outline: none;	
-	}
+  &:focus {
+    outline: none;
+  }
 }
 
 @mixin button($wb-background-color, $wb-text-color) {
-	background-color: $wb-background-color;
-	color: $wb-text-color;
+  background-color: $wb-background-color;
+  color: $wb-text-color;
 
-	&:hover {
-		background-color: darken($wb-background-color, 15%);
-		color: #fff;
-	}
+  &:hover {
+    background-color: darken($wb-background-color, 15%);
+    color: $wb-white;
+  }
 
-	&:active {
-		background-color: darken($wb-background-color, 12%);
-	}
+  &:active {
+    background-color: darken($wb-background-color, 12%);
+  }
 }
 
 button,
 .button,
 a.button {
-	@extend .button-static;
-	@include button($wb-btn-default-bg, $wb-btn-default-color);
+  @extend %button-static;
+  @include button($wb-btn-default-bg, $wb-btn-default-color);
 }
 
 
 a.button-primary,
 .button-primary {
-	@extend .button;
+  @extend %button;
 
-	@include button($wb-btn-primary-bg, $wb-btn-primary-color);
+  @include button($wb-btn-primary-bg, $wb-btn-primary-color);
 }
 
 .button-small {
-	@extend .button;
+  @extend %button;
 
-	font-size: $wb-btn-small-font-size !important;
+  font-size: $wb-btn-small-font-size !important;
 }
 
 .button-large {
-	@extend .button;
+  @extend %button;
 
-	font-size: $wb-btn-large-font-size !important;
+  font-size: $wb-btn-large-font-size !important;
 }
