--- a/scss/components/_comments.scss
+++ b/scss/components/_comments.scss
@@ -3,56 +3,58 @@
  */
 
 #comments {
-	border: 1px solid #ccc;
-	border-radius: 6px;
+  border: 1px solid $wb-gray-lighter;
+  border-radius: 6px;
 
-	/* Any video inside the comments */
-	iframe {
-		max-width: 100%;
-	}
+  /* Any video inside the comments */
+  iframe {
+    max-width: 100%;
+  }
 }
 
 .comments-title {
-	margin-left: 1em;
-	margin-top: 1em;
-	margin-bottom: 0;
+  margin-left: 1em;
+  margin-top: 1em;
+  margin-bottom: 0;
 }
 
 .comment-list {
-	margin-top: 1em;
-	list-style: none;
-	margin-left: 0;
-	padding-left: 0;
+  margin-top: 1em;
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
 }
 
 .comment {
-	padding: 1em;
-	border-bottom: 1px dotted #ccc;
+  padding: 1em;
+  border-bottom: 1px dotted $wb-gray-lighter;
 
-	&.even {}
+  &.even {
+    // Add some styling here
+  }
 
-	&.odd {
-		background-color: lighten(#eee, 2%);
-	}
+  &.odd {
+    background-color: lighten($wb-gray-lighter, 2%);
+  }
 }
 
 .comment-author {
-	.avatar {
-		float: left;
-		margin-right: .5em;
-	}
+  .avatar {
+    float: left;
+    margin-right: .5em;
+  }
 }
 
 .comment-metadata {
-	font-size: 0.8em;
-	font-style: italic;
+  font-size: .8em;
+  font-style: italic;
 }
 
 #respond {
-	padding: 1em;
+  padding: 1em;
 
-	textarea,
-	label {
-		display: block;
-	}
+  textarea,
+  label {
+    display: block;
+  }
 }
