--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -1,142 +1,141 @@
 /*
- * Navigation 
+ * Navigation
  */
 
 /* Top navigation */
 .top-navigation {
-	padding: .3em 0;
-	background-color: #222;
+  padding: .3em 0;
+  background-color: $wb-gray;
 
+  .menu-item,
+  .page_item {
+    border: 0;
 
-	.menu-item,
-	.page_item {
-		border: none;
+    a {
+      color: $wb-white;
+    }
+  }
 
-		a { 
-			color: #fff; 
-		}
-	}
+  .sub-menu,
+  .children {
+    background-color: $wb-gray-dark;
+  }
 
-	.sub-menu,
-	.children {
-		background-color: #222;
-	}
-
-	.menu ul {
-		float: left;
-		margin-bottom: 0;
-	}
+  .menu ul {
+    float: left;
+    margin-bottom: 0;
+  }
 }
 
 #menu-top {
-	margin: 0;
-	float: right;
+  margin: 0;
+  float: right;
 }
 
 /* Main navigation */
 .main-navigation {
-	padding: .618em 0;
-	background-color: #ccc;
+  padding: .618em 0;
+  background-color: $wb-gray-light;
 }
 
 .nav-menu {
-	float: left;
-	margin-bottom: 0;
+  float: left;
+  margin-bottom: 0;
 }
 
 .menu-item,
 .page_item {
-	margin-left: .5em;
-	padding-left: .5em;
-	border-left: 1px solid #aaa;
+  margin-left: .5em;
+  padding-left: .5em;
+  border-left: 1px solid $wb-gray;
 
-	a { 
-		color: #333;
-	}
+  a {
+    color: $wb-gray-darker;
+  }
 
-	&:first-child {
-		border-left: none;
-		margin-left: 0;
-		padding-left: 0;
-	}
+  &:first-child {
+    border-left: 0;
+    margin-left: 0;
+    padding-left: 0;
+  }
 }
 
 .nav-menu > li:first-child,
 .menu-item,
 .page_item {
-	float: left;
+  float: left;
 }
 
 /* Dropdown menu */
 .sub-menu,
 .children {
-	position: absolute;
-	display: none;
-	background-color: #eee;
+  position: absolute;
+  display: none;
+  background-color: $wb-gray-lighter;
 
-	.menu-item,
-	.page_item {
-		border: 0;
-		display: block;
-		float: none;
-	}
+  .menu-item,
+  .page_item {
+    border: 0;
+    display: block;
+    float: none;
+  }
 
-	.sub-menu,
-	.children {
-		top: 0;
-		left: 100%;
-	}
+  .sub-menu,
+  .children {
+    top: 0;
+    left: 100%;
+  }
 }
 
 /* Dropdown menu element */
 .menu-item-has-children,
 .page_item_has_children {
-	position: relative;
+  position: relative;
 
-	&:hover > .sub-menu,
-	&:hover > .children {
-		display: block;
-	}
+  &:hover > .sub-menu,
+  &:hover > .children {
+    display: block;
+  }
 }
 
 /* Toggle button for mobile navigation */
 .menu-toggle,
 .main-navigation.toggled .nav-menu {
-	display: block;
+  display: block;
 
-	@include respond-to(36em) {
-		display: none;
-	}
+  @include respond-to(36em) {
+    display: none;
+  }
 }
 
 .main-navigation .nav-menu {
-	display: none;
+  display: none;
 
-	@include respond-to(36em) {
-		display: block;
-	}
+  @include respond-to(36em) {
+    display: block;
+  }
 }
 
 /* Misc navigation elements */
 .site-main .comment-navigation,
 .site-main .posts-navigation,
 .site-main .post-navigation {
-	margin: 0 0 1.5em;
-	overflow: hidden;
+  margin: 0 0 1.5em;
+  overflow: hidden;
 }
 
 /* Pagination */
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
 .post-navigation .nav-previous {
-	float: left;
-	width: 50%;
+  float: left;
+  width: 50%;
 }
 
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
 .post-navigation .nav-next {
-	float: right;
-	text-align: right;
-	width: 50%;
+  float: right;
+  text-align: right;
+  width: 50%;
 }
