--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -15,7 +15,7 @@ $wb-body-bg: #fff !default;
 // Colors
 
 // Brand colors
-$wb-brand-primary: blue;
+$wb-brand-primary: #00f;
 
 // Custom colors
 $wb-gray-base: #000;
@@ -24,6 +24,7 @@ $wb-gray-dark: #333;
 $wb-gray: #555;
 $wb-gray-light: #777;
 $wb-gray-lighter: #eee;
+$wb-white: #fff;
 
 // Typography
 
